# Global-PPB

./: .gitignore  Cargo.toml  Dockerfile  README.md  bi.html  docker-compose.yml  requirements.txt
leaderboard_site/: db.sqlite3  manage.py
leaderboard_site/css/: cite.css
leaderboard_site/leaderboard_site/: asgi.py  settings.py  urls.py  views.py  wsgi.py
leaderboard_site/users/: apps.py  models.py  views.py
leaderboard_site/users/migrations/: 0001_initial.py  0002_alter_userprofile_birth_date_and_more.py  0003_alter_userprofile_acct_created.py  0004_alter_userprofile_acct_created_and_more.py
leaderboard_site/users/static/: site.css
leaderboard_site/users/templates/: login.html  register.html
migrations/: 20240401060143_Player.down.sql  20240401060143_Player.up.sql  20240401060257_Score.down.sql  20240401060257_Score.up.sql  20240401060307_Business.down.sql  20240401060307_Business.up.sql  20240401070533_seeding.down.sql  20240401070533_seeding.up.sql
python/: graphs.py  growth.py  init.py
src/: appstate.rs  graphs.py  init.py  main.rs  prelude.rs  score_populate.rs
