[package]
name = "Global-PPB"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
dotenv = "0.15.0"
handlebars = "5.1.0"
plotpy = "0.6.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
